--- a/public/404.html
+++ b/public/404.html
@@ -31,7 +31,7 @@
     
     
 
-    <meta name="keyword"  content="赵化冰, zhaohuabing, Zhaohuabing, , 赵化冰的网络日志, 赵化冰的博客, Zhaohuabing Blog, 博客, 个人网站, 互联网, Web, 云原生, PaaS, Istio, Kubernetes, 微服务, Microservice">
+    <meta name="keyword"  content="R, Python, Docker, Shiny, Statistics, Analysis, Data Cleaning, Programming">
     <link rel="shortcut icon" href="/img/favicon.ico">
 
     <title>404 Page not found-Arafath Hossain | Curious Joe</title>
@@ -189,7 +189,7 @@
 			<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 				<div class="site-heading" id="tag-heading">
 					<h1>404</h1>
-					<span class="subheading">你来到了没有知识的荒原 :(</span>
+					<span class="subheading">Sorry, I don&#39;t have what you are looking for :(</span>
 				</div>
 			</div>
 		</div>
