--- a/public/top/about/index.html
+++ b/public/top/about/index.html
@@ -177,13 +177,15 @@
                 col-md-10 col-md-offset-1
                 post-container">
 
-         	<p><img src="/img/profile_pic.png" alt="">  I&rsquo;m a data scientist by profession. I work in the higher education industry. I come from a business management background with trainings in computer programming.</p>
-<p>I have worked in the market research and telecommunication industries before moving into data science.</p>
+         	
+
+
+<p><img src="/top/about_files/profile_pic.png" width="400" height='600'/></p>
+<p>I am a data scientist by profession. I work in the higher education industry. I come from a business management background with trainings in computer programming. I have worked in the market research and telecommunication industries before moving into data science.</p>
 <p>I love the always changing and improving nature of the technology industry especially in the area of data science and artificial intelligence.</p>
-<p>I have a bachelor degree in Business Administration and MS in Quality Management and Assurance.</p>
-<p>Currently I&rsquo;m working as a data scientist at Illinois State University, Illinois&rsquo;s first public university!</p>
+<p>I have a bachelor degree in Business Administration and MS in Quality Management and Assurance. Currently I am working as a data scientist at Illinois State University, Illinois first public university!</p>
 <p>While not working, I enjoy travelling, catching fish, watching movies, learning about new technology and watching documentaries.</p>
-<p>Feel free to connect Huabing via LinkedIn (<a href="https://www.linkedin.com/in/arafath-hossain/">https://www.linkedin.com/in/arafath-hossain/</a>) or drop me an email (<a href="mailto:a.h.fahad90@gmail.com">a.h.fahad90@gmail.com</a>).</p>
+<p>Feel free to connect Huabing via LinkedIn (<a href="https://www.linkedin.com/in/arafath-hossain/" class="uri">https://www.linkedin.com/in/arafath-hossain/</a>) or drop me an email (<a href="mailto:a.h.fahad90@gmail.com" class="email">a.h.fahad90@gmail.com</a>).</p>
 
                 
 <div id="disqus-comment"></div>
