--- a/public/top/about/index.html
+++ b/public/top/about/index.html
@@ -151,7 +151,7 @@
                 <div class="site-heading">
                     <h1>Curious Joe </h1>
                     
-		    <span class="subheading">Stay Curious</span>
+		    <span class="subheading">Blog of Arafath Hossain</span>
                 </div>
             </div>
         </div>
@@ -174,7 +174,7 @@
          	
 
 
-<p><img src="/top/about_files/profile_pic.png" width="400" height='600'/></p>
+<p><img src="/top/about_files/profile_pic.png" width="250" height='300'/></p>
 <p>I am a data scientist by profession. I work in the higher education industry. I come from a business management background with trainings in computer programming. I have worked in the market research and telecommunication industries before moving into data science.</p>
 <p>I love the always changing and improving nature of the technology industry especially in the area of data science and artificial intelligence.</p>
 <p>I have a bachelor degree in Business Administration and MS in Quality Management and Assurance. Currently I am working as a data scientist at Illinois State University, Illinois first public university!</p>
