modified aboutme page

--- a/public/top/about/index.html
+++ b/public/top/about/index.html
@@ -175,11 +175,10 @@
 
 
 <p><img src="/top/about_files/profile_pic.png" width="250" height='300'/></p>
-<p>I am a data scientist by profession. I work in the higher education industry. I come from a business management background with trainings in computer programming. I have worked in the market research and telecommunication industries before moving into data science.</p>
-<p>I love the always changing and improving nature of the technology industry especially in the area of data science and artificial intelligence.</p>
-<p>I have a bachelor degree in Business Administration and MS in Quality Management and Assurance. Currently I am working as a data scientist at Illinois State University, Illinois first public university!</p>
-<p>While not working, I enjoy travelling, catching fish, watching movies, learning about new technology and watching documentaries.</p>
-<p>Feel free to connect Huabing via LinkedIn (<a href="https://www.linkedin.com/in/arafath-hossain/" class="uri">https://www.linkedin.com/in/arafath-hossain/</a>) or drop me an email (<a href="mailto:a.h.fahad90@gmail.com" class="email">a.h.fahad90@gmail.com</a>).</p>
+<p>I am a data scientist by profession. Currently I’m working in the higher education industry. Before moving into the area of Data Science, I worked in market research and product management.</p>
+<p>I like the constant improving nature of the technologies used in data science and Machine Learning areas and love to experiment with new tools and methodologies.</p>
+<p>While not working, I enjoy travelling, catching fish, watching movies, learning about new technology and watching documentaries on random topics!</p>
+<p>And also I love connecting and interacting with people in LinkedIn! So please feel free to connect with me via LinkedIn (<a href="https://www.linkedin.com/in/arafath-hossain/" class="uri">https://www.linkedin.com/in/arafath-hossain/</a>) or drop me an email at (<a href="mailto:a.h.fahad90@gmail.com" class="email">a.h.fahad90@gmail.com</a>).</p>
 
                 
 <div id="disqus-comment"></div>
