--- a/content/top/about.html
+++ b/content/top/about.html
@@ -7,8 +7,8 @@ output: html_document
 
 
 
-<p><img src="/top/about_files/profile_pic.png" width="250" height='300'/></p>
-<p>I am a data scientist by profession. Currently I’m working in the higher education industry. Before moving into the area of Data Science, I worked in market research and product management.</p>
-<p>I like the constant improving nature of the technologies used in data science and Machine Learning areas and love to experiment with new tools and methodologies.</p>
-<p>While not working, I enjoy travelling, catching fish, watching movies, learning about new technology and watching documentaries on random topics!</p>
-<p>And also I love connecting and interacting with people in LinkedIn! So please feel free to connect with me via LinkedIn (<a href="https://www.linkedin.com/in/arafath-hossain/" class="uri">https://www.linkedin.com/in/arafath-hossain/</a>) or drop me an email at (<a href="mailto:a.h.fahad90@gmail.com" class="email">a.h.fahad90@gmail.com</a>).</p>
+<p><img src="/top/about_files/profile_pic_3.png" width="250" height='300'/></p>
+<p>Hi there! Thanks for visiting my blog!</p>
+<p>I’m Arafath Hossain. I am a data scientist by profession, and a curious soul by nature. Currently I’m working for a public university in a small beautiful twin city called Bloomington-Normal in Illinois, US.</p>
+<p>My primary areas of interest in Data Science are predictive modeling, and causal inferences. I love to make the bridge between data science and the business users through building data science focused applications! Before moving into Data Science, I worked in market research and product management. My business background helps me to see a problem from the business users’ point of view and then use my technical capabilities to tie in their business need with the solution.</p>
+<p>While not working or spending my time dabbling into new and exciting areas of Data Science, I enjoy traveling, catching fish, watching movies, and watching documentaries on random topics! Also, I spend a lot of time in LinkedIn connecting and interacting with people. So if you are in LinkedIn feel free to connect with me <a href="https://www.linkedin.com/in/arafath-hossain/">here</a> or if you are an emailing kind of person drop me an email at <a href="mailto:a.h.fahad90@gmail.com" class="email">a.h.fahad90@gmail.com</a>!</p>
