--- a/public/top/about/index.html
+++ b/public/top/about/index.html
@@ -174,7 +174,7 @@
          	
 
 
-<p><img src="/top/about_files/profile_pic_3.png" width="250" height='300'/></p>
+<p><img src="/img/profile_pic_3.png" width="250" height='300'/></p>
 <p>Hi there! Thanks for visiting my blog!</p>
 <p>I’m Arafath Hossain. I am a data scientist by profession, and a curious soul by nature. Currently I’m working for a public university in a small beautiful twin city called Bloomington-Normal in Illinois, US.</p>
 <p>My primary areas of interest in Data Science are predictive modeling, and causal inferences. I love to make the bridge between data science and the business users through building data science focused applications! Before moving into Data Science, I worked in market research and product management. My business background helps me to see a problem from the business users’ point of view and then use my technical capabilities to tie in their business need with the solution.</p>
