--- a/content/top/portfolio.html
+++ b/content/top/portfolio.html
@@ -1,18 +1,17 @@
 ---
-title: ' '
-author: Arafath Hossain
+title: ''
+author: "Arafath Hossain"
 date: '2021-03-28'
 output: html_document
 ---
 
-<script src="{{< blogdown/postref >}}index_files/header-attrs/header-attrs.js"></script>
+<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <style type="text/css">
 h1, h2, h3 {
   text-align: center;
 }
-
 </style>
 <div id="using-k-nearest-neighbor-to-understand-hollywood-movies" class="section level3">
 <h3>Using K Nearest Neighbor to Understand Hollywood Movies</h3>
