added youtube analytics
added youtube analytics to portfolio

--- a/content/top/portfolio.html
+++ b/content/top/portfolio.html
@@ -36,6 +36,12 @@ h1, h2, h3, p {
   background-color: #c2c1bc; 
   color: white;
 }
+
+.well {
+  min-height: 250px;
+  max-height: 250px;
+  overflow-y: scroll;
+}
 </style>
 <!--- First Row -->
 <div class="row">
@@ -63,5 +69,49 @@ h1, h2, h3, p {
 </div>
 </div>
 <!--- end fastEda package -->
+<!-- Text Analytics Youtube -->
+<div class="col-sm-6">
+<div id="text-analysis-on-youtube-videos" class="section level2 well">
+<h2>Text Analysis on Youtube Videos</h2>
+<p>This analysis is part of an ongoing exploratory study about how Bangladesh is presented through contents shared on different internet platforms. In the last <a href="https://curious-joe.net/post/twitter-topic-modeling-sentiment-analysis/">article</a> tweets that containing Bangladesh were analyzed to understand the most common areas that people tweeted about Bangladesh and how public sentiments were reflected. In this article, a similar study will be conducted on the videos shared on Youtube that have Bangladesh in their titles.</p>
+<p><a href="https://github.com/Curious-Joe/Text_Analytics_Youtube" class="button">Git Code</a></p>
+<p><a href="https://curious-joe.net/post/2021-03-30-text-analysis-on-youtube-videos-posted-about-bangladesh/" class="button">Blog Post</a></p>
+</div>
+</div>
+<!--- end text analytics youtube -->
 </div>
 <!--- First row ends -->
+<div class="col-sm-6">
+<div class="card" style="width:">
+<img src="/img/shiny_hollywood_movie.jpg" class="card-img-top" alt="..." width="50" height="600">
+<div class="card-body">
+<h5 class="card-title">
+Using K Nearest Neighbor to Understand Hollywood Movies
+</h5>
+<p class="card-text">
+<p>A Shiny app that has been built as an R package using <code>golem</code> framework. The primary goal of this application is to help users:</p>
+<ol style="list-style-type: decimal">
+<li>Interactively explore the data, and</li>
+<li>Use an algorithm: K-Nearest Neighbors (KNN) to cluster the observations for a deeper understanding of both the data and model.</li>
+</ol>
+</p>
+<p><a href="https://curiousjoe.shinyapps.io/HollywoodMovies2/" class="button">Live App</a>
+<a href="https://github.com/Curious-Joe/HollywoodApp2.0" class="button">Git Code</a></p>
+</div>
+</div>
+</div>
+<div class="col-sm-6">
+<div class="card" style="width:">
+<img src="/img/shiny_hollywood_movie.jpg" class="card-img-top" alt="..." width="250" height="300">
+<div class="card-body">
+<h5 class="card-title">
+Text Analysis on Youtube Videos
+</h5>
+<p class="card-text">
+<p>This analysis is part of an ongoing exploratory study about how Bangladesh is presented through contents shared on different internet platforms. In the last <a href="https://curious-joe.net/post/twitter-topic-modeling-sentiment-analysis/">article</a> tweets that containing Bangladesh were analyzed to understand the most common areas that people tweeted about Bangladesh and how public sentiments were reflected. In this article, a similar study will be conducted on the videos shared on Youtube that have Bangladesh in their titles.</p>
+</p>
+<p><a href="https://github.com/Curious-Joe/Text_Analytics_Youtube" class="button">Git Code</a>
+<a href="https://curious-joe.net/post/2021-03-30-text-analysis-on-youtube-videos-posted-about-bangladesh/" class="button">Blog Post</a></p>
+</div>
+</div>
+</div>
