added text analytics - git
put portfolio projects inside same size boxes and added key topics in each project box

--- a/content/top/portfolio.html
+++ b/content/top/portfolio.html
@@ -2,7 +2,10 @@
 title: ''
 author: "Arafath Hossain"
 date: '2021-03-28'
-output: html_document
+output: 
+    html_document:
+        theme: 
+            version: 4
 ---
 
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
@@ -42,6 +45,7 @@ h1, h2, h3, p {
   max-height: 250px;
   overflow-y: scroll;
 }
+
 </style>
 <!--- First Row -->
 <div class="row">
@@ -49,69 +53,36 @@ h1, h2, h3, p {
 <div class="col-sm-6">
 <div id="using-k-nearest-neighbor-to-understand-hollywood-movies" class="section level3 well">
 <h3>Using K Nearest Neighbor to Understand Hollywood Movies</h3>
+<p>🎫R 🎫Web App 🎫ML 🎫Data Viz</p>
 <p>A Shiny app that has been built as an R package using <code>golem</code> framework. The primary goal of this application is to help users:</p>
 <ol style="list-style-type: decimal">
 <li>Interactively explore the data, and</li>
 <li>Use an algorithm: K-Nearest Neighbors (KNN) to cluster the observations for a deeper understanding of both the data and model.</li>
 </ol>
-<p><a href="https://curiousjoe.shinyapps.io/HollywoodMovies2/" class="button">Live App</a>
-<a href="https://github.com/Curious-Joe/HollywoodApp2.0" class="button">Git Code</a></p>
+<p><a href="https://curiousjoe.shinyapps.io/HollywoodMovies2/" class="button">Live App</a> <a href="https://github.com/Curious-Joe/HollywoodApp2.0" class="button">Git Code</a></p>
 <p><img src="/img/shiny_hollywood_movie.jpg" title="Shiny App: Hollywood Movies" width="492" /></p>
 </div>
 </div>
 <!--- end hollywood app -->
 <!--- fastEda package -->
 <div class="col-sm-6">
-<div id="fasteda" class="section level2 well">
-<h2>fastEda</h2>
-<p><code>fastEda</code> is an R package intended to make repeated plotting tasks performed during the exploratory data analysis phase easier and faster. Using this package users will be able to quickly create plots for multiple variables.</p>
+<div id="fasteda" class="section level3 well">
+<h3>fastEda</h3>
+<p>🎫R Package 🎫Data Analysis</p>
+<p><code>fastEda</code> is an R package intended to make visual exploratory data analysis easier and faster. Using this package users will be able to quickly create plots to visualize uni-variate and bi-variate relations.</p>
 <p><a href="https://github.com/Curious-Joe/fastEda" class="button">Git Code</a></p>
 </div>
 </div>
 <!--- end fastEda package -->
 <!-- Text Analytics Youtube -->
 <div class="col-sm-6">
-<div id="text-analysis-on-youtube-videos" class="section level2 well">
-<h2>Text Analysis on Youtube Videos</h2>
-<p>This analysis is part of an ongoing exploratory study about how Bangladesh is presented through contents shared on different internet platforms. In the last <a href="https://curious-joe.net/post/twitter-topic-modeling-sentiment-analysis/">article</a> tweets that containing Bangladesh were analyzed to understand the most common areas that people tweeted about Bangladesh and how public sentiments were reflected. In this article, a similar study will be conducted on the videos shared on Youtube that have Bangladesh in their titles.</p>
-<p><a href="https://github.com/Curious-Joe/Text_Analytics_Youtube" class="button">Git Code</a></p>
-<p><a href="https://curious-joe.net/post/2021-03-30-text-analysis-on-youtube-videos-posted-about-bangladesh/" class="button">Blog Post</a></p>
+<div id="text-analysis-on-youtube-videos" class="section level3 well">
+<h3>Text Analysis on Youtube Videos</h3>
+<p>🎫R 🎫NLP</p>
+<p>This analysis was part of an ongoing exploratory study about how Bangladesh was presented through contents shared on different internet platforms. In a previous <a href="https://curious-joe.net/post/twitter-topic-modeling-sentiment-analysis/">article</a> tweets that contained ‘Bangladesh’, a South Asian country, were analyzed to understand the most common areas that people tweeted about Bangladesh and what kind of sentiments were reflected. In this article, a similar analysis was conducted on the videos shared on Youtube that had Bangladesh in their titles.</p>
+<p><a href="https://github.com/Curious-Joe/Text_Analytics_Youtube" class="button">Git Code</a> <a href="https://curious-joe.net/post/2021-03-30-text-analysis-on-youtube-videos-posted-about-bangladesh/" class="button">Blog Post</a></p>
 </div>
 </div>
 <!--- end text analytics youtube -->
 </div>
 <!--- First row ends -->
-<div class="col-sm-6">
-<div class="card" style="width:">
-<img src="/img/shiny_hollywood_movie.jpg" class="card-img-top" alt="..." width="50" height="600">
-<div class="card-body">
-<h5 class="card-title">
-Using K Nearest Neighbor to Understand Hollywood Movies
-</h5>
-<p class="card-text">
-<p>A Shiny app that has been built as an R package using <code>golem</code> framework. The primary goal of this application is to help users:</p>
-<ol style="list-style-type: decimal">
-<li>Interactively explore the data, and</li>
-<li>Use an algorithm: K-Nearest Neighbors (KNN) to cluster the observations for a deeper understanding of both the data and model.</li>
-</ol>
-</p>
-<p><a href="https://curiousjoe.shinyapps.io/HollywoodMovies2/" class="button">Live App</a>
-<a href="https://github.com/Curious-Joe/HollywoodApp2.0" class="button">Git Code</a></p>
-</div>
-</div>
-</div>
-<div class="col-sm-6">
-<div class="card" style="width:">
-<img src="/img/shiny_hollywood_movie.jpg" class="card-img-top" alt="..." width="250" height="300">
-<div class="card-body">
-<h5 class="card-title">
-Text Analysis on Youtube Videos
-</h5>
-<p class="card-text">
-<p>This analysis is part of an ongoing exploratory study about how Bangladesh is presented through contents shared on different internet platforms. In the last <a href="https://curious-joe.net/post/twitter-topic-modeling-sentiment-analysis/">article</a> tweets that containing Bangladesh were analyzed to understand the most common areas that people tweeted about Bangladesh and how public sentiments were reflected. In this article, a similar study will be conducted on the videos shared on Youtube that have Bangladesh in their titles.</p>
-</p>
-<p><a href="https://github.com/Curious-Joe/Text_Analytics_Youtube" class="button">Git Code</a>
-<a href="https://curious-joe.net/post/2021-03-30-text-analysis-on-youtube-videos-posted-about-bangladesh/" class="button">Blog Post</a></p>
-</div>
-</div>
-</div>
