made the project boxes larger

--- a/content/top/portfolio.html
+++ b/content/top/portfolio.html
@@ -41,8 +41,8 @@ h1, h2, h3, p {
 }
 
 .well {
-  min-height: 250px;
-  max-height: 250px;
+  min-height: 350px;
+  max-height: 350px;
   overflow-y: scroll;
 }
 
@@ -68,7 +68,7 @@ h1, h2, h3, p {
 <div class="col-sm-6">
 <div id="fasteda" class="section level3 well">
 <h3>fastEda</h3>
-<p>🎫R Package 🎫Data Analysis</p>
+<p>🎫R Package</p>
 <p><code>fastEda</code> is an R package intended to make visual exploratory data analysis easier and faster. Using this package users will be able to quickly create plots to visualize uni-variate and bi-variate relations.</p>
 <p><a href="https://github.com/Curious-Joe/fastEda" class="button">Git Code</a></p>
 </div>
