added Tableau: worried americans project

--- a/content/top/portfolio.html
+++ b/content/top/portfolio.html
@@ -81,8 +81,19 @@ h1, h2, h3, p {
 <p>🎫R 🎫NLP</p>
 <p>This analysis was part of an ongoing exploratory study about how Bangladesh was presented through contents shared on different internet platforms. In a previous <a href="https://curious-joe.net/post/twitter-topic-modeling-sentiment-analysis/">article</a> tweets that contained ‘Bangladesh’, a South Asian country, were analyzed to understand the most common areas that people tweeted about Bangladesh and what kind of sentiments were reflected. In this article, a similar analysis was conducted on the videos shared on Youtube that had Bangladesh in their titles.</p>
 <p><a href="https://github.com/Curious-Joe/Text_Analytics_Youtube" class="button">Git Code</a> <a href="https://curious-joe.net/post/2021-03-30-text-analysis-on-youtube-videos-posted-about-bangladesh/" class="button">Blog Post</a></p>
+<p><img src="/img/worried_americans.png" title="Shiny App: Hollywood Movies" width="492" /></p>
 </div>
 </div>
 <!--- end text analytics youtube -->
+<!-- tableau: worried americans -->
+<div class="col-sm-6">
+<div id="how-worried-are-americans" class="section level3 well">
+<h3>How Worried are Americans?</h3>
+<p>🎫Tableau 🎫Data Viz</p>
+<p>This <code>Tableau</code> dashboard visualizes a <a href="https://www.gallup.com/home.aspx">Gallup</a> survey measuring anxiety levels of Americans across all the continental states. This interactive dashboard allows users to have a quick comparative overview of different states in terms of the residents’ anxiety level.</p>
+<p><a href="https://public.tableau.com/profile/curious.joe#!/vizhome/HowworriedareAmericans/ComparisonwithSelectedState" class="button">Live Dashboard</a></p>
+</div>
+</div>
+<!--- end tableau: worried americans -->
 </div>
 <!--- First row ends -->
