--- a/content/top/portfolio.html
+++ b/content/top/portfolio.html
@@ -95,5 +95,15 @@ h1, h2, h3, p {
 </div>
 </div>
 <!--- end tableau: worried americans -->
+<!-- Python: enrollment prediction -->
+<div class="col-sm-6">
+<div id="will-that-admitted-student-actually-enroll" class="section level3 well">
+<h3>Will that Admitted Student Actually Enroll?</h3>
+<p>🎫Python 🎫Predictive Modeling 🎫Data Analysis</p>
+<p>This project is about analyzing historic data about the admitted students, and building a predictive model to calculate probability of enrollment for the admitted students.</p>
+<p><a href="https://github.com/Curious-Joe/Enrollment_Prediction_Model/blob/master/Notebook/Enrollment%20Prediction%20Model.ipynb" class="button">Git Code</a></p>
+</div>
+</div>
+<!--- end tableau: worried americans -->
 </div>
 <!--- First row ends -->
