--- a/content/top/portfolio.html
+++ b/content/top/portfolio.html
@@ -26,12 +26,12 @@ h1, h2, h3, p {
   background-color: white;
   border: 2px solid black;
   color: black;
-  padding: 5px 15px;
+  padding: 5px 10px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
+  font-size: 12px;
+  margin: 2px 2px;
   cursor: pointer;
   transition-duration: 0.4s;
 }
@@ -47,30 +47,38 @@ h1, h2, h3, p {
 }
 
 </style>
-<!--- First Row -->
-<div class="row">
 <!--- Hollywood movie app -->
 <div class="col-sm-6">
 <div id="using-k-nearest-neighbor-to-understand-hollywood-movies" class="section level3 well">
 <h3>Using K Nearest Neighbor to Understand Hollywood Movies</h3>
 <p>🎫R 🎫Web App 🎫ML 🎫Data Viz</p>
-<p>A Shiny app that has been built as an R package using <code>golem</code> framework. The primary goal of this application is to help users:</p>
+<p><a href="https://curiousjoe.shinyapps.io/HollywoodMovies2/" class="button">Live App</a> <a href="https://github.com/Curious-Joe/HollywoodApp2.0" class="button">Git Code</a></p>
+<p>A Shiny app built as an R package using <code>golem</code> framework. The primary goal of this application is to help users:</p>
 <ol style="list-style-type: decimal">
 <li>Interactively explore the data, and</li>
 <li>Use an algorithm: K-Nearest Neighbors (KNN) to cluster the observations for a deeper understanding of both the data and model.</li>
 </ol>
-<p><a href="https://curiousjoe.shinyapps.io/HollywoodMovies2/" class="button">Live App</a> <a href="https://github.com/Curious-Joe/HollywoodApp2.0" class="button">Git Code</a></p>
 <p><img src="/img/shiny_hollywood_movie.jpg" title="Shiny App: Hollywood Movies" width="492" /></p>
 </div>
 </div>
 <!--- end hollywood app -->
+<!-- Python: enrollment prediction -->
+<div class="col-sm-6">
+<div id="will-that-admitted-student-actually-enroll" class="section level3 well">
+<h3>Will that Admitted Student Actually Enroll?</h3>
+<p>🎫Python 🎫Machine Learning 🎫Data Analysis</p>
+<p><a href="https://github.com/Curious-Joe/Enrollment_Prediction_Model/blob/master/Notebook/Enrollment%20Prediction%20Model.ipynb" class="button">Git Code</a></p>
+<p>This project is about analyzing historic data about the admitted students, and building a predictive model to calculate probability of enrollment for the admitted students.</p>
+</div>
+</div>
+<!--- end tableau: worried americans -->
 <!--- fastEda package -->
 <div class="col-sm-6">
 <div id="fasteda" class="section level3 well">
 <h3>fastEda</h3>
 <p>🎫R Package</p>
-<p><code>fastEda</code> is an R package intended to make visual exploratory data analysis easier and faster. Using this package users will be able to quickly create plots to visualize uni-variate and bi-variate relations.</p>
 <p><a href="https://github.com/Curious-Joe/fastEda" class="button">Git Code</a></p>
+<p><code>fastEda</code> is an R package intended to make visual exploratory data analysis easier and faster. Using this package users will be able to quickly create plots to visualize uni-variate and bi-variate relations.</p>
 </div>
 </div>
 <!--- end fastEda package -->
@@ -79,8 +87,8 @@ h1, h2, h3, p {
 <div id="text-analysis-on-youtube-videos" class="section level3 well">
 <h3>Text Analysis on Youtube Videos</h3>
 <p>🎫R 🎫NLP</p>
-<p>This analysis was part of an ongoing exploratory study about how Bangladesh was presented through contents shared on different internet platforms. In a previous <a href="https://curious-joe.net/post/twitter-topic-modeling-sentiment-analysis/">article</a> tweets that contained ‘Bangladesh’, a South Asian country, were analyzed to understand the most common areas that people tweeted about Bangladesh and what kind of sentiments were reflected. In this article, a similar analysis was conducted on the videos shared on Youtube that had Bangladesh in their titles.</p>
 <p><a href="https://github.com/Curious-Joe/Text_Analytics_Youtube" class="button">Git Code</a> <a href="https://curious-joe.net/post/2021-03-30-text-analysis-on-youtube-videos-posted-about-bangladesh/" class="button">Blog Post</a></p>
+<p>This analysis was part of an ongoing exploratory study about how Bangladesh, a south Asian country, was presented through contents shared on different internet platforms. In a previous <a href="https://curious-joe.net/post/twitter-topic-modeling-sentiment-analysis/">article</a> tweets that contained ‘Bangladesh’ were analyzed to understand the most common areas that people tweeted about Bangladesh and what kind of sentiments were reflected. In this article, a similar analysis was conducted on the videos shared on Youtube that had Bangladesh in their titles.</p>
 </div>
 </div>
 <!--- end text analytics youtube -->
@@ -89,21 +97,17 @@ h1, h2, h3, p {
 <div id="how-worried-are-americans" class="section level3 well">
 <h3>How Worried are Americans?</h3>
 <p>🎫Tableau 🎫Data Viz</p>
-<p>This <code>Tableau</code> dashboard visualizes a <a href="https://www.gallup.com/home.aspx">Gallup</a> survey measuring anxiety levels of Americans across all the continental states. This interactive dashboard allows users to have a quick comparative overview of different states in terms of the residents’ anxiety level.</p>
 <p><a href="https://public.tableau.com/profile/curious.joe#!/vizhome/HowworriedareAmericans/ComparisonwithSelectedState" class="button">Live Dashboard</a></p>
-<p><img src="/img/worried_americans.png" title="Shiny App: Hollywood Movies" width="492" /></p>
+<p>This <code>Tableau</code> dashboard visualizes a <a href="https://www.gallup.com/home.aspx">Gallup</a> survey measuring anxiety levels of Americans across all the continental states. This interactive dashboard allows users to have a quick comparative overview of different states in terms of the residents’ anxiety level.</p>
 </div>
 </div>
 <!--- end tableau: worried americans -->
-<!-- Python: enrollment prediction -->
+<!-- tableau: worried americans -->
 <div class="col-sm-6">
-<div id="will-that-admitted-student-actually-enroll" class="section level3 well">
-<h3>Will that Admitted Student Actually Enroll?</h3>
-<p>🎫Python 🎫Predictive Modeling 🎫Data Analysis</p>
-<p>This project is about analyzing historic data about the admitted students, and building a predictive model to calculate probability of enrollment for the admitted students.</p>
-<p><a href="https://github.com/Curious-Joe/Enrollment_Prediction_Model/blob/master/Notebook/Enrollment%20Prediction%20Model.ipynb" class="button">Git Code</a></p>
+<div id="where-are-the-low-income-students" class="section level3 well">
+<h3>Where are the Low Income Students?</h3>
+<p>🎫Tableau 🎫Data Viz</p>
+<p><a href="https://public.tableau.com/profile/curious.joe#!/vizhome/PellGrant/Dashboard1" class="button">Live Dashboard</a></p>
+<p>This <code>Tableau</code> dashboard visualizes data on <a href="https://studentaid.gov/understand-aid/types/grants/pell">Pell Grant</a> recipients as shared by the U.S. Department of Education. It shows a comparison among the states in terms of the total number of Pell Grant recipients. It also allows users to see highest Pell recipient receiving institutions, and how their positions change over the years.</p>
 </div>
 </div>
-<!--- end tableau: worried americans -->
-</div>
-<!--- First row ends -->
