--- a/content/top/portfolio.html
+++ b/content/top/portfolio.html
@@ -47,10 +47,20 @@ h1, h2, h3, p {
 }
 
 </style>
+<!--- fastEda package -->
+<div class="col-sm-6">
+<div id="fasteda" class="section level3 well">
+<h3>fastEda</h3>
+<p>🎫R Package</p>
+<p><a href="https://github.com/Curious-Joe/fastEda" class="button">Git Code</a></p>
+<p><code>fastEda</code> is an R package intended to make visual exploratory data analysis easier and faster. Using this package users will be able to quickly create plots to visualize uni-variate and bi-variate relations.</p>
+</div>
+</div>
+<!--- end fastEda package -->
 <!--- Hollywood movie app -->
 <div class="col-sm-6">
-<div id="using-k-nearest-neighbor-to-understand-hollywood-movies" class="section level3 well">
-<h3>Using K Nearest Neighbor to Understand Hollywood Movies</h3>
+<div id="using-clustering-to-understand-hollywood-movies" class="section level3 well">
+<h3>Using Clustering to Understand Hollywood Movies</h3>
 <p>🎫R 🎫Web App 🎫ML 🎫Data Viz</p>
 <p><a href="https://curiousjoe.shinyapps.io/HollywoodMovies2/" class="button">Live App</a> <a href="https://github.com/Curious-Joe/HollywoodApp2.0" class="button">Git Code</a></p>
 <p>A Shiny app built as an R package using <code>golem</code> framework. The primary goal of this application is to help users:</p>
@@ -72,16 +82,6 @@ h1, h2, h3, p {
 </div>
 </div>
 <!--- end tableau: worried americans -->
-<!--- fastEda package -->
-<div class="col-sm-6">
-<div id="fasteda" class="section level3 well">
-<h3>fastEda</h3>
-<p>🎫R Package</p>
-<p><a href="https://github.com/Curious-Joe/fastEda" class="button">Git Code</a></p>
-<p><code>fastEda</code> is an R package intended to make visual exploratory data analysis easier and faster. Using this package users will be able to quickly create plots to visualize uni-variate and bi-variate relations.</p>
-</div>
-</div>
-<!--- end fastEda package -->
 <!-- Text Analytics Youtube -->
 <div class="col-sm-6">
 <div id="text-analysis-on-youtube-videos" class="section level3 well">
