changed button text: git code to github repo

--- a/content/top/portfolio.html
+++ b/content/top/portfolio.html
@@ -52,7 +52,7 @@ h1, h2, h3, p {
 <div id="fasteda" class="section level3 well">
 <h3>fastEda</h3>
 <p>🎫R Package</p>
-<p><a href="https://github.com/Curious-Joe/fastEda" class="button">Git Code</a></p>
+<p><a href="https://github.com/Curious-Joe/fastEda" class="button">GitHub Repo</a></p>
 <p><code>fastEda</code> is an R package intended to make visual exploratory data analysis easier and faster. Using this package users will be able to quickly create plots to visualize uni-variate and bi-variate relations.</p>
 </div>
 </div>
@@ -62,7 +62,7 @@ h1, h2, h3, p {
 <div id="using-clustering-to-understand-hollywood-movies" class="section level3 well">
 <h3>Using Clustering to Understand Hollywood Movies</h3>
 <p>🎫R 🎫Web App 🎫ML 🎫Data Viz</p>
-<p><a href="https://curiousjoe.shinyapps.io/HollywoodMovies2/" class="button">Live App</a> <a href="https://github.com/Curious-Joe/HollywoodApp2.0" class="button">Git Code</a></p>
+<p><a href="https://curiousjoe.shinyapps.io/HollywoodMovies2/" class="button">Live App</a> <a href="https://github.com/Curious-Joe/HollywoodApp2.0" class="button">GitHub Repo</a></p>
 <p>A Shiny app built as an R package using <code>golem</code> framework. The primary goal of this application is to help users:</p>
 <ol style="list-style-type: decimal">
 <li>Interactively explore the data, and</li>
@@ -77,7 +77,7 @@ h1, h2, h3, p {
 <div id="will-that-admitted-student-actually-enroll" class="section level3 well">
 <h3>Will that Admitted Student Actually Enroll?</h3>
 <p>🎫Python 🎫Machine Learning 🎫Data Analysis</p>
-<p><a href="https://github.com/Curious-Joe/Enrollment_Prediction_Model/blob/master/Notebook/Enrollment%20Prediction%20Model.ipynb" class="button">Git Code</a></p>
+<p><a href="https://github.com/Curious-Joe/Enrollment_Prediction_Model/blob/master/Notebook/Enrollment%20Prediction%20Model.ipynb" class="button">GitHub Repo</a></p>
 <p>This project is about analyzing historic data about the admitted students, and building a predictive model to calculate probability of enrollment for the admitted students.</p>
 </div>
 </div>
@@ -87,7 +87,7 @@ h1, h2, h3, p {
 <div id="text-analysis-on-youtube-videos" class="section level3 well">
 <h3>Text Analysis on Youtube Videos</h3>
 <p>🎫R 🎫NLP</p>
-<p><a href="https://github.com/Curious-Joe/Text_Analytics_Youtube" class="button">Git Code</a> <a href="https://curious-joe.net/post/2021-03-30-text-analysis-on-youtube-videos-posted-about-bangladesh/" class="button">Blog Post</a></p>
+<p><a href="https://github.com/Curious-Joe/Text_Analytics_Youtube" class="button">GitHub Repo</a> <a href="https://curious-joe.net/post/2021-03-30-text-analysis-on-youtube-videos-posted-about-bangladesh/" class="button">Blog Post</a></p>
 <p>This analysis was part of an ongoing exploratory study about how Bangladesh, a south Asian country, was presented through contents shared on different internet platforms. In a previous <a href="https://curious-joe.net/post/twitter-topic-modeling-sentiment-analysis/">article</a> tweets that contained ‘Bangladesh’ were analyzed to understand the most common areas that people tweeted about Bangladesh and what kind of sentiments were reflected. In this article, a similar analysis was conducted on the videos shared on Youtube that had Bangladesh in their titles.</p>
 </div>
 </div>
