lower font size of finaid title

--- a/content/top/portfolio.html
+++ b/content/top/portfolio.html
@@ -49,9 +49,9 @@ h1, h2, h3, p {
 </style>
 <!--- Financial aid app -->
 <div class="col-sm-6">
-<div id="financial-aid-app" class="section level2 well">
-<h2>Financial Aid App</h2>
-<p>🎫Web App 🎫ML</p>
+<div id="financial-aid-app" class="section level3 well">
+<h3>Financial Aid App</h3>
+<p>🎫R 🎫Web App 🎫ML</p>
 <p>{{% youtube "Us32_Pu0W_Y" %}}</p>
 <p>A web application that runs Extreme Gradient Boosting behind the scene to predict students’ enrollment probability, and help users decide on financial aid amount by observing the change in prediction based on different aid amounts.</p>
 </div>
