minor edits on portfolio page

--- a/content/top/portfolio.html
+++ b/content/top/portfolio.html
@@ -41,8 +41,8 @@ h1, h2, h3, p {
 }
 
 .well {
-  min-height: 350px;
-  max-height: 350px;
+  min-height: 450px;
+  max-height: 450px;
   overflow-y: scroll;
 }
 
@@ -73,12 +73,7 @@ h1, h2, h3, p {
 <h3>Using Clustering to Understand Hollywood Movies</h3>
 <p>🎫R 🎫Web App 🎫ML 🎫Data Viz</p>
 <p><a href="https://curiousjoe.shinyapps.io/HollywoodMovies2/" class="button">Live App</a> <a href="https://github.com/Curious-Joe/HollywoodApp2.0" class="button">GitHub Repo</a></p>
-<p>A Shiny app built as an R package using <code>golem</code> framework. The primary goal of this application is to help users:</p>
-<ol style="list-style-type: decimal">
-<li>Interactively explore the data, and</li>
-<li>Use an algorithm: K-Nearest Neighbors (KNN) to cluster the observations for a deeper understanding of both the data and model.</li>
-</ol>
-<p><img src="/img/shiny_hollywood_movie.jpg" title="Shiny App: Hollywood Movies" width="492" /></p>
+<p>A Shiny app built as an R package using <code>golem</code> framework. This interactive application helps users to explore the data, and use K-Nearest Neighbors (KNN) to cluster the movies for a deeper understanding of both the data and model.</p>
 </div>
 </div>
 <!--- end hollywood app -->
@@ -98,7 +93,7 @@ h1, h2, h3, p {
 <h3>Text Analysis on Youtube Videos</h3>
 <p>🎫R 🎫NLP</p>
 <p><a href="https://github.com/Curious-Joe/Text_Analytics_Youtube" class="button">GitHub Repo</a> <a href="https://curious-joe.net/post/2021-03-30-text-analysis-on-youtube-videos-posted-about-bangladesh/" class="button">Blog Post</a></p>
-<p>This analysis was part of an ongoing exploratory study about how Bangladesh, a south Asian country, was presented through contents shared on different internet platforms. In a previous <a href="https://curious-joe.net/post/twitter-topic-modeling-sentiment-analysis/">article</a> tweets that contained ‘Bangladesh’ were analyzed to understand the most common areas that people tweeted about Bangladesh and what kind of sentiments were reflected. In this article, a similar analysis was conducted on the videos shared on Youtube that had Bangladesh in their titles.</p>
+<p>In this analysis different text analytics techniques such as topic modeling, sentiment analysis were used to analyze the Youtube video titles that contained ‘Bangladesh’, a south Asian country. The goal was to understand which areas were highlighted about Bangladesh, and what kind of sentiments were reflected.</p>
 </div>
 </div>
 <!--- end text analytics youtube -->
